Se le dio funcionalidad al boton de limpiar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="date" id="fecha">
         </div>
         <button type="submit">Agregar a la agenda</button>
-        <button type="reset">Limpiar agenda</button>
+        <button type="reset" id="botonBorrar">Limpiar agenda</button>
     </form>
     <ul id="listaRecitales"></ul>
     <script src="app.js"></script>
