--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda de Recitales</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <h1>Agenda de Recitales</h1>
@@ -31,6 +32,6 @@
         <button type="reset" id="botonBorrar">Limpiar agenda</button>
     </form>
     <ul id="listaRecitales"></ul>
-    <script src="app.js"></script>
+    <script src="./JS/app.js"></script>
 </body>
 </html>
